...
          ListTile(
            key: const Key('homeTile'),
            leading: const Icon(
              FontAwesomeIcons.house, // replace with your own icon
              size: 25,
            ),
            title: const Text('My Courses'),
            onTap: () {
              Navigator.pushReplacementNamed(context, '/my_courses');
            },
          ),
          ListTile(
            key: const Key('modulesTile'),
            leading: const Icon(
              FontAwesomeIcons.book, // replace with your own icon
              size: 25,
            ),
            title: const Text('Modules'),
            onTap: () {
              Navigator.pushReplacementNamed(context, '/modules');
            },
          ),
          ListTile(
            key: const Key('todosTile'),
...
          ListTile(
            key: const Key('moodleTile'),
            leading: const Icon(
              FontAwesomeIcons.m, // replace with your own icon
              size: 25,
            ),
            title: const Text('Moodle'),
            onTap: () {
              Navigator.pushReplacementNamed(context, '/moodle');
            },
          ),
          ListTile(
            key: const Key('primussTile'),
            leading: const Icon(
              FontAwesomeIcons.idCard, // replace with your own icon
              size: 25,
            ),
            title: const Text('Primuss'),
            onTap: () {
              Navigator.pushReplacementNamed(context, '/primuss');
            },
          ),
          ListTile(
            key: const Key('chatgptTile'),
            leading: const Icon(
              FontAwesomeIcons.comments, // replace with your own icon
              size: 25,
            ),
            title: const Text('ChatGPT'),
            onTap: () {
              Navigator.pushReplacementNamed(context, '/chatgpt');
            },
          ),
          const Divider(),
          ListTile(
...
            leading: const Icon(
              FontAwesomeIcons.arrowRightFromBracket,
              // replace with your own icon
              size: 25,
            ),
            title: const Text(
              'Logout',
              style: TextStyle(color: Colors.red),
            ),
            onTap: () async {
              BuildContext initialContext = context;
              AppSettings appSettings =
                  Provider.of<AppSettings>(context, listen: false);
...
