...
                ),
                ListTile(
                  title: const Text('Sort by Lehrform'),
                  onTap: () => _updateSortOptions('lehrform'),
                ),
                SwitchListTile(
                  title: const Text('Ascending'),
                  value: _sortDir == 'asc',
                  onChanged: (bool value) {
                    setState(() {
                      _sortDir = value ? 'asc' : 'desc';
                    });
                    _updateSorting();
...
            );
          } else {
            return Padding(
              padding: const EdgeInsets.symmetric(vertical: 16.0),
              child: Center(
                child: OutlinedButton(
                  child: const Text('Load More'),
                  onPressed: () {
                    setState(() {
                      currentPage++;
                      fetchModules();
                    });
                  },
...
